--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -29,8 +29,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-15T14:25:14.466869Z",
-     "start_time": "2025-06-15T14:25:14.430476Z"
+     "end_time": "2025-06-15T14:35:15.627438Z",
+     "start_time": "2025-06-15T14:35:15.590924Z"
     }
    },
    "cell_type": "code",
@@ -68,6 +68,7 @@
     "        corr = self.df2.copy().astype(str)\n",
     "        corr['Date'] = corr['Date'] + \" \" + corr['Time']\n",
     "        cleaned = cleaned[(cleaned['Date Gathered'].isin(corr['Date'])) & (cleaned['Account Reference'].isin(corr['Account number']))]\n",
+    "        corr['Status'] = np.where(corr['Account number'].isin(cleaned['Account Reference']), \"Corrected\", \"Not Found\")\n",
     "        return corr\n",
     "\n",
     "    def save_data(self) -> None:\n",
@@ -78,13 +79,13 @@
    ],
    "id": "b7eb632d1c1260e1",
    "outputs": [],
-   "execution_count": 193
+   "execution_count": 201
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-15T14:25:15.940013Z",
-     "start_time": "2025-06-15T14:25:15.900767Z"
+     "end_time": "2025-06-15T14:35:17.158323Z",
+     "start_time": "2025-06-15T14:35:17.088297Z"
     }
    },
    "cell_type": "code",
@@ -107,14 +108,23 @@
        "5     RENZO  2024-09-12 16:26:17  16:26:17  JYYYYYYYLYL76DMJ   \n",
        "6    CHAZEL  2024-09-12 16:43:08  16:43:08  10000000BFDFDIII   \n",
        "\n",
-       "    Field to update                                          New value  \n",
-       "0    Contact Source                                             OFFICE  \n",
-       "1             Notes                                 09G6AA5RYB5 KOR 2X  \n",
-       "2             Notes  09J9CT68QK4 DLR TT CH SD CLMPD 2K LST MNDY AND...  \n",
-       "3  Disposition Desc                                          FOLLOW UP  \n",
-       "4             Notes                                09F3AT453XX SKP KOR  \n",
-       "5             Notes                                09C5AR5892A SKP KOR  \n",
-       "6             Notes                                    09ACVV6002F KOR  "
+       "    Field to update                                          New value  \\\n",
+       "0    Contact Source                                             OFFICE   \n",
+       "1             Notes                                 09G6AA5RYB5 KOR 2X   \n",
+       "2             Notes  09J9CT68QK4 DLR TT CH SD CLMPD 2K LST MNDY AND...   \n",
+       "3  Disposition Desc                                          FOLLOW UP   \n",
+       "4             Notes                                09F3AT453XX SKP KOR   \n",
+       "5             Notes                                09C5AR5892A SKP KOR   \n",
+       "6             Notes                                    09ACVV6002F KOR   \n",
+       "\n",
+       "      Status  \n",
+       "0  Corrected  \n",
+       "1  Corrected  \n",
+       "2  Corrected  \n",
+       "3  Corrected  \n",
+       "4  Corrected  \n",
+       "5  Corrected  \n",
+       "6  Not Found  "
       ],
       "text/html": [
        "<div>\n",
@@ -141,6 +151,7 @@
        "      <th>Account number</th>\n",
        "      <th>Field to update</th>\n",
        "      <th>New value</th>\n",
+       "      <th>Status</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -152,6 +163,7 @@
        "      <td>OXXXXXXXPRTSTORX</td>\n",
        "      <td>Contact Source</td>\n",
        "      <td>OFFICE</td>\n",
+       "      <td>Corrected</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -161,6 +173,7 @@
        "      <td>JYYYYYYYJFYMJMY6</td>\n",
        "      <td>Notes</td>\n",
        "      <td>09G6AA5RYB5 KOR 2X</td>\n",
+       "      <td>Corrected</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -170,6 +183,7 @@
        "      <td>OXXXXXXXO9UPTT9P</td>\n",
        "      <td>Notes</td>\n",
        "      <td>09J9CT68QK4 DLR TT CH SD CLMPD 2K LST MNDY AND...</td>\n",
+       "      <td>Corrected</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -179,6 +193,7 @@
        "      <td>OXXXXXXXPXUOTSO8</td>\n",
        "      <td>Disposition Desc</td>\n",
        "      <td>FOLLOW UP</td>\n",
+       "      <td>Corrected</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -188,6 +203,7 @@
        "      <td>OXXXXXXXPP8T9SRU</td>\n",
        "      <td>Notes</td>\n",
        "      <td>09F3AT453XX SKP KOR</td>\n",
+       "      <td>Corrected</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -197,6 +213,7 @@
        "      <td>JYYYYYYYLYL76DMJ</td>\n",
        "      <td>Notes</td>\n",
        "      <td>09C5AR5892A SKP KOR</td>\n",
+       "      <td>Corrected</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -206,18 +223,19 @@
        "      <td>10000000BFDFDIII</td>\n",
        "      <td>Notes</td>\n",
        "      <td>09ACVV6002F KOR</td>\n",
+       "      <td>Not Found</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ]
      },
-     "execution_count": 194,
+     "execution_count": 202,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 194
+   "execution_count": 202
   }
  ],
  "metadata": {
