--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -29,8 +29,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-15T14:35:15.627438Z",
-     "start_time": "2025-06-15T14:35:15.590924Z"
+     "end_time": "2025-06-15T14:38:58.332643Z",
+     "start_time": "2025-06-15T14:38:58.320920Z"
     }
    },
    "cell_type": "code",
@@ -71,15 +71,16 @@
     "        corr['Status'] = np.where(corr['Account number'].isin(cleaned['Account Reference']), \"Corrected\", \"Not Found\")\n",
     "        return corr\n",
     "\n",
-    "    def save_data(self) -> None:\n",
-    "        return\n",
+    "    def save_data(self) -> pd.DataFrame:\n",
+    "        to_save = self.df1.copy()\n",
+    "        return to_save\n",
     "\n",
     "\n",
     "\n"
    ],
    "id": "b7eb632d1c1260e1",
    "outputs": [],
-   "execution_count": 201
+   "execution_count": 203
   },
   {
    "metadata": {
